// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> should render without crashing and match snapshot 1`] = `
<DocumentFragment>
  <div
    class="popover-content hidden absolute left-full top-1/2 -translate-y-1/2 z-10"
  >
    <div
      class="relative"
    >
      <svg>
        caret-left
      </svg>
      <div
        class="bg-black ml-2 text-white p-2 rounded-lg shadow-lg mb-2"
      >
        xxx
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Popover /> should render without crashing with mini sidebar 1`] = `
<DocumentFragment>
  <div
    class="popover-content hidden absolute left-full top-1/2 -translate-y-1/2 z-10"
  >
    <div>
      xxx
    </div>
  </div>
</DocumentFragment>
`;
